--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
         <h2 class="title gallery-section__title">Галерея</h2>
         <div class="gallery">
           <div class="gallery__item">
-            <img src="images/gallery-items/gallery_item_1.png" alt="" class="gallery__img">
+            <img src="images/gallery-items/gallery_item_1.jpg" alt="" class="gallery__img">
             Истории клиентов
           </div>
           <div class="gallery__item">
-            <img src="images/gallery-items/gallery_item_2.png" alt="" class="gallery__img">
+            <img src="images/gallery-items/gallery_item_2.jpg" alt="" class="gallery__img">
             Статьи
           </div>
           <div class="gallery__item">
-            <img src="images/gallery-items/gallery_item_3.png" alt="" class="gallery__img">
+            <img src="images/gallery-items/gallery_item_3.jpg" alt="" class="gallery__img">
             Уголок минималиста
           </div>
         </div>
@@ -96,27 +96,27 @@
         <h2 class="title courses__title">Курсы</h2>
         <div class="gallery courses__gallery">
           <div class="gallery__item">
-            <img src="images/courses-items/courses_item_1.png" alt="" class="gallery__img">
+            <img src="images/courses-items/courses_item_1.jpg" alt="" class="gallery__img">
             Минималистичный<br>гардероб
           </div>
           <div class="gallery__item">
-            <img src="images/courses-items/courses_item_2.png" alt="" class="gallery__img">
+            <img src="images/courses-items/courses_item_2.jpg" alt="" class="gallery__img">
             Мышление<br>минималиста
           </div>
           <div class="gallery__item">
-            <img src="images/courses-items/courses_item_3.png" alt="" class="gallery__img">
+            <img src="images/courses-items/courses_item_3.jpg" alt="" class="gallery__img">
             Минимализм<br>в питании
           </div>
           <div class="gallery__item">
-            <img src="images/courses-items/courses_item_4.png" alt="" class="gallery__img">
+            <img src="images/courses-items/courses_item_4.jpg" alt="" class="gallery__img">
             Грамотное<br>расхламление
           </div>
           <div class="gallery__item">
-            <img src="images/courses-items/courses_item_5.png" alt="" class="gallery__img">
+            <img src="images/courses-items/courses_item_5.jpg" alt="" class="gallery__img">
             Минимализм<br>в доме
           </div>
           <div class="gallery__item">
-            <img src="images/courses-items/courses_item_6.png" alt="" class="gallery__img">
+            <img src="images/courses-items/courses_item_6.jpg" alt="" class="gallery__img">
             Минимализм<br>и соцсети
           </div>
         </div>
@@ -157,6 +157,6 @@
     </div>
     <p class="copyright">© 2020 SCHOOL OF MINIMALISM</p>
   </footer>
-  <script src="js/main.js"></script>
+  <script src="js/main.min.js"></script>
 </body>
 </html>
