--- a/index.html
+++ b/index.html
@@ -13,11 +13,24 @@
       <div class="header__top">
         <div class="header__logo">MS</div>
         <nav class="menu header__menu">
-          <a class="menu__link" href="#">О проекте</a>
-          <a class="menu__link" href="#">Галерея</a>
-          <a class="menu__link" href="#">Курсы</a>
-          <a class="menu__link" href="#">Контакты</a>
+          <ul class="header__menu-list">
+            <li class="header__menu-item">
+              <a class="menu__link header__menu-link" href="#">О проекте</a>
+            </li>
+            <li class="header__menu-item">
+              <a class="menu__link header__menu-link" href="#">Галерея</a>
+            </li>
+            <li class="header__menu-item">
+              <a class="menu__link header__menu-link" href="#">Курсы</a>
+            </li>
+            <li class="header__menu-item">
+              <a class="menu__link header__menu-link" href="#">Контакты</a>
+            </li>
+          </ul>
         </nav>
+        <div class="menu__icon">
+          <span></span>
+        </div>
         <a class="header__sign-in" href="#">Войти</a>
         <a class="header__search"></a>
       </div>
